syntax="proto3";

import "message.proto";

service SimpleServer {
	rpc SimpleServer(stream Chunk) returns (stream Chunk) {}
}
